# ddl-designer

./: .gitignore  README.md  local_run.py  pyproject.toml
app/: main.py  pyproject.toml
app/routers/: api_designer.py
app/utils/: ddl_designer.py
