[tool.poetry]
name = "ddl-designer"
version = "0.1.0"
description = ""
authors = ["Shashwat <forwardtoshashwat@gmail.com>"]
readme = "README.md"
packages = [{include = "ddl_designer"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
