[tool.poetry]
name = "ddl-designer"
version = "0.1.0"
description = ""
authors = ["Shashwat <forwardtoshashwat@gmail.com>"]
readme = "README.md"
packages = [{include = "ddl_designer"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.70.1,<1.0.0"
uvicorn = ">=0.16.0,<1.0.0"
pandas = "^1.1.0"
python-multipart = "=0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
